# ipcmanview-old-3

./: .gitignore  Cargo.toml  Makefile  README.md  sqlx-data.json
dahua-rpc/: Cargo.toml
dahua-rpc/dahua-rpc_derive/: Cargo.toml
dahua-rpc/dahua-rpc_derive/src/: lib.rs
dahua-rpc/src/: cookie.rs  file.rs  lib.rs  login.rs  modules.rs  utils.rs
dahua-rpc/src/modules/: config.rs  configmanager.rs  global.rs  license.rs  magicbox.rs  mediafilefind.rs  storage.rs
dahuarpc/: Cargo.toml
dahuarpc/src/: cookie.rs
dahuarpc/src/modules/: magicbox.rs  mod.rs
dhrpc/: Cargo.toml
dhrpc/src/: file.rs  utils.rs
dhrpc/src/modules/: mediafilefind.rs
ipcmanview-agent/: Cargo.toml
ipcmanview-agent/src/: http.rs  main.rs
ipcmanview-agent/templates/: base.j2.html  scans.j2.html
ipcmanview-cli/: Cargo.toml
ipcmanview-cli/src/: lib.rs  main.rs
ipcmanview-server/: .gitignore  Cargo.toml  go.mod  main.go  server.http
ipcmanview-server/migrations/: 1683610044_collections_snapshot.go  1683672688_collections_snapshot.go  1683845702_collections_snapshot.go  1684394899_collections_snapshot.go  1684471155_collections_snapshot.go
ipcmanview-server/server/: hooks.go  middleware.go  routes.go  station.go
ipcmanview-server/src/: main.rs
ipcmanview-server/templates/: base.j2.html
ipcmanview-station/: Cargo.toml  station.http  swagger.json
ipcmanview-station/src/: app.rs  lib.rs  main.rs  models.rs  mpa.rs
ipcmanview-station/src/api/: api.rs  camera.rs  events.rs  file.rs  mod.rs  scan.rs
ipcmanview-station/src/dto/: mod.rs  page.rs
ipcmanview-station/templates/: base.jinja.html  files.jinja.html  index.jinja.html  scans.jinja.html
ipcmanview-station/templates/camera/: show.jinja.html
ipcmanview-ui/: .env  .env.development  app.vue  embed.go  embed_dev.go  go.mod  go.sum  nuxt.config.ts  package.json  pnpm-lock.yaml  swagger-typescript-api.cjs  tailwind.config.js  vite.config.ts
ipcmanview-ui/src/: App.tsx  hooks.ts  index.css  index.tsx  models.ts  pb.ts  pb.tsx  records.ts  utils.ts
ipcmanview-ui/src/components/: ActionButtons.stories.tsx  ActionButtons.tsx  Button.stories.ts  Button.tsx  Card.stories.ts  Card.tsx  FormTextInput.stories.ts  FormTextInput.tsx  Header.stories.tsx  Header.tsx  InputError.tsx  InputText.stories.ts  InputText.tsx  InputTextFrag.stories.ts  InputTextFrag.tsx  NavBar.tsx  NavButton.stories.tsx  NavButton.tsx  NavLink.stories.tsx  NavLink.tsx  Spinner.stories.tsx  Spinner.tsx
ipcmanview-ui/src/data/: api.ts  direct.ts  hooks.ts  models.ts  pb.tsx  records.ts  station.ts  utils.ts
ipcmanview-ui/src/data/pb/: hooks.ts  index.tsx  records.ts
ipcmanview-ui/src/data/station/: direct.ts  hooks.ts  index.ts  models.ts
ipcmanview-ui/src/pages/: Home.tsx  Loading.tsx  Login.tsx  Profile.tsx  StationList.tsx  StationShow.tsx  Stations.tsx  StationsShow.tsx
ipcmanview-ui/src/pages/Station/: drawer.tsx  index.tsx
ipcmanview-ui/src/pages/Station/Cameras/: index.tsx
ipcmanview-ui/src/pages/Station/Debug/: Debug.tsx
ipcmanview-ui/src/pages/Station/Files/: index.tsx
ipcmanview-ui/src/pages/Station/Home/: index.tsx
ipcmanview-ui/src/pages/Stations/: Show.tsx  index.tsx
ipcmanview-ui/src/ui/: ActionButtons.stories.tsx  Breadcrumb.tsx  Button.stories.ts  Button.tsx  Card.stories.ts  Card.tsx  Dialog.tsx  Dropdown.tsx  ErrorText.tsx  Icon.tsx  InputError.tsx  InputText.stories.ts  InputText.tsx  InputTextFrag.stories.ts  Layouts.tsx  Menu.tsx  Spinner.stories.tsx  Spinner.tsx  ThemeSwitcher.tsx  theme-mode.ts  theme.ts  utility.ts
ipcmanview-ui/src/views/: Application.tsx  Debug.tsx  Loading.tsx  Login.tsx
migrations/: 20230413211236_initial.sql  20230415005338_camera_file.sql  20230416001330_initial.sql  20230501183831_initial.sql
rpc/: Cargo.toml
rpc/src/: cookie.rs  file.rs  lib.rs  login.rs  utils.rs
rpc/src/modules/: global.rs  license.rs  magicbox.rs  mediafilefind.rs
src/: core.rs  db.rs  dto.rs  http.rs  ipc.rs  lib.rs  main.rs  models.rs  procs.rs  query.rs  scan.rs
src/db/: camera.rs  ipc.rs  mod.rs  scan.rs
src/models/: mod.rs  page.rs  query.rs  scan.rs
src/rpc/: global.rs  license.rs  magicbox.rs  mediafilefind.rs  mod.rs  rpccookie.rs  rpclogin.rs  utils.rs
templates/: base.html.tera  base.j2.html  files.html.tera  files.j2.html  index.html.tera  index.j2.html  scans.html.tera  scans.j2.html
templates/camera/: list.html.tera  show.html.tera  show.j2.html
