[workspace]
members = [
  "rpc"
]

[package]
name = "ipcmanview"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15.0"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_dyn_templates = { version = "=0.1.0-rc.3", features = ["tera"] }
rpc = { path = "rpc" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite", "chrono", "offline"] }
tokio = { version = "1.0", features = ["full"] }
