[workspace]
members = [
  "dahua-rpc",
  "ipcmanview-server"
]
default-members = ["ipcmanview-server"]

[package]
name = "ipcmanview"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.24", features = ["serde"] }
dahua-rpc = { path = "dahua-rpc" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite", "chrono", "offline", "json"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
