[package]
name = "ipcmanview-station"
version = "0.1.0"
edition = "2021"
default-run = "ipcmanview-station"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
askama = { version = "0.12.0", features = ["with-axum", "serde-json"] }
askama_axum = "0.3.0"
axum = { version = "0.6.18", features = ["http2", "tracing"] }
axum-extra = { version = "0.7.4", features = ["query"] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15.0"
humantime = "2.1.0"
ipcmanview = { path = "../" }
mime_guess = "2.0.4"
reqwest = { version = "0.11", default-features = false, features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_html_form = "0.2.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = "3"
